--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: java
 jdk:
   - oraclejdk8
 
-install: ./gradlew setupCiWorkspace -S
-script: ./gradlew build
+install: bash gradlew setupCiWorkspace -S
+script: bash gradlew build
