--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: java
 jdk:
   - oraclejdk8
 
-install: bash gradlew setupCiWorkspace -S
+install: bash gradlew setupCiWorkspace
 script: bash gradlew build
