--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,12 @@ buildscript {
 
 apply plugin: 'forge'
 
+def getVersionAppendage(){
+  if(System.env.BUILD_NUMBER)
+    return "."+System.env.BUILD_NUMBER
+  return ""
+}
+
 repositories {
     maven {
         name = "ic2"
@@ -24,7 +30,7 @@ repositories {
     }
 }
 
-version = "2.0.0"
+version = "2.0.0"+getVersionAppendage()
 group= "panda2134.CLG" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "CLG"
 
