Moved to IntelliJ IDEA...

--- a/build.gradle
+++ b/build.gradle
@@ -65,3 +65,7 @@ processResources
         exclude 'mcmod.info'
     }
 }
+sourceSets {
+    main { output.resourcesDir = output.classesDir }
+}
+idea { module { inheritOutputDirs = true } }
