--- a/.drone.yml
+++ b/.drone.yml
@@ -1,17 +1,9 @@
-pipeline:
-  build:
-    image: frekele/gradle
-    secrets: [ ARTIFACTORY_PASSWORD, ARTIFACTORY_USER, ARTIFACTORY_URL, REPOSITORY_KEY ]
-    commands:
-       # Install the JFrog CLI
-      - curl -fL https://getcli.jfrog.io | sh
-      - ./jfrog rt config --url=$ARTIFACTORY_URL --user=$ARTIFACTORY_USER --password=$ARTIFACTORY_PASSWORD
-      - ./jfrog rt c show
-        # Change the repository name in the configuration.yml to the the REPOSITORY_KEY .
-      - sed -i 's,REPOSITORY_KEY,'"$REPOSITORY_KEY"',g' configuration.yml
-         # Run the gradle command with the CLI
-      - ./jfrog rt gradle "clean artifactoryPublish -b build.gradle" configuration.yml --build-name=CLG
-        # Collect the environment variables with bce command
-      - ./jfrog rt bce CLG 
-        # Publish the build with bp command
-      - ./jfrog rt bp CLG
+kind: pipeline
+name: BuildNightyVersion
+
+steps:
+- name: default
+  image: gradle:jdk8
+  commands:
+  - gradle setupCIWorkspace
+  - gradle build
